--- a/_config.yml
+++ b/_config.yml
@@ -67,9 +67,9 @@ heroButtons:
 # About Block
 aboutTitle: "About GDG DevFest"
 aboutBlock:
- - {title: "Conference", image: "conference.jpg", text: "The biggest Google related event in the country carefully crafted for you by GDG community! Awesome speakers and lots of fun!" }
- - {title: "Workshops", image: "workshop.jpg", text: "Full-day of workshops, hands-on experience, hacking and debugging. Come and tame your favourite technology!" }
- - {title: "Hackathon", image: "hackathon.jpg", text: "Full-day freestyle hackathon! Want some real team building on friday? Grab your team and join our hackathon!" }
+ - {title: "Open-Source", image: "open-source.jpg", text: "Open source software is software with source code that anyone can inspect, modify, and enhance." }
+ - {title: "Competitive", image: "competitive.jpg", text: "Competitive programming is a mind sport usually held over the Internet or a local network, involving participants trying to program according to provided specifications. Contestants are referred to as sport programmers."}
+ - {title: "Share-Ideas", image: "ideas.jpg", text: "knowledge always multiply by sharing. We share ideas and concepts about different programming languages so that you learn something new everytime you give us a visit." }
 
 # Statistic Block
 statisticBlockImage: "statistic.jpg"
