--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ metaKeywords: "event, gdg, devfest, google, programming, android, chrome, develo
 twitterAccount: "@DevFest"
 socialImageSrcGooglePlus: "/img/seo/sharing-google-plus.png"
 socialImageSrcTwitter: "/img/seo/sharing-twitter.png"
-socialImageSrcFacebook: "/img/seo/sharing-facebook.png"
+socialImageSrcFacebook: "/img/seo/logo.png"
 
 # Documents
 c4pUrl: "https://bit.ly/dfua-c4p"
