--- a/_data/team.yml
+++ b/_data/team.yml
@@ -37,6 +37,21 @@
     - {name: "google-plus", link: "https://google.com/+OstapAndrusiv"}
     - {name: "twitter", link: "https://twitter.com/p1f"}
     - {name: "site", link: "http://andrusiv.com/"}
+ -
+  id: 2
+  name: "Akshay"
+  surname: "Sharma"
+  title: "Team Member"
+  thumbnailUrl:akshay01.jpeg
+  team: true
+  ribbon:
+    - {abbr: "GDG", title: "Google Developer Group"}
+  social:
+    - {name: "github", link: "https://github.com/akshaysharma2277"}
+    
+
+    
+   
 -
   id: 4
   name: "Dmytro"
